force-app/main/default/objects/Filter_Tab__c/Filter_Tab__c.object-meta.xml
<CustomObject>
    <label>ME Core: Filter Tab</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Tabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>