force-app/main/default/objects/Filter_Tab__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>If you choose Text or Formula field Search result will be limited up to 9000 records.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>