force-app/main/default/objects/Filter_Tab__c/fields/isNotDirectReference__c.field-meta.xml
<CustomField>
    <fullName>isNotDirectReference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNotDirectReference</label>
    <type>Checkbox</type>
</CustomField>