force-app/main/default/objects/Filter_Tab__c/fields/Mass_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Mass_Implementation__c</fullName>
    <label>Mass Implementation</label>
    <referenceTo>SL_Mass_Implementation__c</referenceTo>
    <relationshipName>Filter_Tabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>